--- a/reactjsexam/src/App.scss
+++ b/reactjsexam/src/App.scss
@@ -48,26 +48,33 @@
 }
 
 .Products{
-  margin-top: 60px;
 }
 
 .ProductsLines{
   display: flex;
   justify-content: center;
-  margin: 20px 0px 20px 0px;
+  flex-wrap: wrap;
 }
 
 .Product{
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 20px 15px 20px 15px;
   width: 364px;
   border-radius: 3px;
   border: 1px solid #e6e6e6;
   background-color: #ffffff;
+  transition: 0.7s;
+  cursor: pointer;
 }
+
+.Product:hover{
+  border: 1px solid #e6e6e6;
+  -webkit-box-shadow: 10px 10px 66px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 66px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 66px 0px rgba(0,0,0,0.75);}
 
 .Product > img{
   height: 242px;
+  width: 100%;
 }
 
 .Product > h5{
