--- a/reactjsexam/src/App.scss
+++ b/reactjsexam/src/App.scss
@@ -1,6 +1,7 @@
-.App {
+body {
   text-align: center;
   background-color: #f6f6f6;
+  margin: 30px;
 }
 
 .Header{
@@ -33,6 +34,7 @@
   background-color: #e2574c;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
 }
 
 .Header > p{
@@ -58,7 +60,15 @@
 
 .Product{
   margin: 20px 15px 20px 15px;
-  width: 364px;
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  background-color: #ffffff;
+  transition: 0.7s;
+  cursor: pointer;
+}
+
+.Product{
+  margin: 20px 15px 20px 15px;
   border-radius: 3px;
   border: 1px solid #e6e6e6;
   background-color: #ffffff;
@@ -73,7 +83,6 @@
   box-shadow: 10px 10px 66px 0px rgba(0,0,0,0.75);}
 
 .Product > img{
-  height: 242px;
   width: 100%;
 }
 
@@ -82,6 +91,7 @@
   font-family: 'Raleway', sans-serif;
   font-size: 22px;
   font-weight: 500;
+  margin: 0px 8px 35px 8px;
 }
 
 .Product > p{
@@ -90,6 +100,8 @@
   font-family: 'Playfair Display', serif;
   font-size: 15px;
   font-weight: 400;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .Product > span{
@@ -100,13 +112,14 @@
 }
 
 .moreInfo{
-  margin-top: 28px;
+  margin-top: 30px;
   display: flex;
   justify-content: center;
   border: 1px solid #e6e6e6;
 }
 
 .moreInfo > p{
+  margin-top: 10px;
   color: #797979;
   font-family: 'Raleway', sans-serif;
   font-size: 13px;
@@ -143,4 +156,8 @@
 	background-color:#ffffff;
   color:#e2574c;
   border: 2px solid #e2574c;
+}
+
+.Modal{
+  padding: 0px !important; 
 }
