--- a/reactjsexam/src/App.scss
+++ b/reactjsexam/src/App.scss
@@ -1,3 +1,6 @@
+$base-color: #e2574c;
+
+
 body {
   text-align: center;
   background-color: #f6f6f6;
@@ -12,14 +15,9 @@ body {
 
 .Header > h1{
   margin-top: 70px;
-  color: #3c3c3c;
-  font-family: 'Raleway', sans-serif;
-  font-size: 45px;
-  font-weight: 300;
-  line-height: 50px;
-}
-
-.Header > h1 > span{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   color: #3c3c3c;
   font-family: 'Raleway', sans-serif;
   font-size: 45px;
@@ -27,11 +25,20 @@ body {
   line-height: 50px;
 }
 
+
+.Header > h1 > span{
+  color: #3c3c3c;
+  font-family: 'Raleway', sans-serif;
+  font-size: 45px;
+  font-weight: 300;
+  line-height: 50px;
+}
+
 .Separator{
   width: 110px;
   height: 3px;
   border-radius: 2px;
-  background-color: #e2574c;
+  background-color: $base-color;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
@@ -87,6 +94,7 @@ body {
 }
 
 .Product > h5{
+  padding-top: 20px;
   color: #3c3c3c;
   font-family: 'Raleway', sans-serif;
   font-size: 22px;
@@ -105,7 +113,7 @@ body {
 }
 
 .Product > span{
-  color: #e2574c;
+  color: $base-color;
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
   font-weight: 600;
@@ -138,7 +146,7 @@ body {
   width: 174px;
   height: 48px;
   border: 0px;
-  background-color:#e2574c;
+  background-color: $base-color;
   border-radius:3px;
   display:inline-block;
   cursor:pointer;
@@ -155,9 +163,9 @@ body {
 .Products > button:hover {
 	background-color:#ffffff;
   color:#e2574c;
-  border: 2px solid #e2574c;
+  border: 2px solid $base-color;
 }
 
 .Modal{
-  padding: 0px !important; 
+  padding: 0px !important;
 }
