--- a/reactjsexam/src/App.scss
+++ b/reactjsexam/src/App.scss
@@ -64,6 +64,7 @@ body {
 }
 
 .Product{
+  width: 300px;
   margin: 20px 15px 20px 15px;
   border-radius: 3px;
   border: 1px solid #e6e6e6;
@@ -157,4 +158,14 @@ body {
 
 .Modal{
   padding: 0px !important;
+}
+
+.carousel-item {
+  display: flex !important;
+  width: 100% !important;
+  justify-content: center !important;
+}
+
+.carousel-item > .Product{
+  width: 50% !important;
 }
